Fix ugly tooltip flicker
When tooltips overlap their parent element, it produces an ugly flicker
as mouseout events fire over and over. Adding "pointer-events:none" to
the div.tip CSS gets rid of the flicker.

Fixes #96.

--- a/src/FsReveal/style.css
+++ b/src/FsReveal/style.css
@@ -55,6 +55,7 @@ div.tip {
   display:none;
   color:#d1d1d1;
   z-index: 2;
+  pointer-events:none;
 }
 table.pre pre {
   padding:0px;
